# PvZ2Native

./: CMakeLists.txt  README.md  compile.bat  compile.sh  readme_spanish.md
pvz2native/: CMakeLists.txt
pvz2native/include/pvz2native/: config.h  game_parameters.h  pvz2_session.h  utils.h
pvz2native/include/pvz2native/audio/: audio_engine.h  audio_output.h  sles.h  sound_repository.h
pvz2native/include/pvz2native/dependencies/: dependency.h  vfs.h
pvz2native/include/pvz2native/dex/: dex.h
pvz2native/include/pvz2native/diagnostics/: diagnostics.h
pvz2native/include/pvz2native/elf32/: elf32_defs.h  elf32_loader.h
pvz2native/include/pvz2native/engine/: engine.h
pvz2native/include/pvz2native/game/: symbols.h
pvz2native/include/pvz2native/gfx/: gles_compat.h  textures.h
pvz2native/include/pvz2native/input/: input_queue.h
pvz2native/include/pvz2native/patch/: detours.h  patch_address.h
pvz2native/include/pvz2native/runtime/: dynarmic_config.h  guest_heap.h  guest_runtime.h  guest_sync.h  guest_zlib.h  rsb_index.h
pvz2native/src/: config.cpp  game_parameters.c  main.c  session.cpp  utils.c
pvz2native/src/audio/: audio_output.cpp  sles.c  sound_repository.c
pvz2native/src/dependencies/: dependency.cpp  libc_ctype.cpp  libc_internal.h  libc_locale.cpp  libc_misc.cpp  libc_pthread.cpp  libc_socket.cpp  libc_stdio.cpp  libc_stdlib.cpp  libc_string.cpp  libc_time.cpp  libc_unistd.cpp  libc_wchar.cpp  libdl.cpp  libgles.cpp  liblog.cpp  libm.cpp  libopensles.cpp  libstdcxx.cpp  libz.cpp  vfs.cpp
pvz2native/src/dex/: jni_env.cpp
pvz2native/src/dex/hooks/: android_game_app.cpp  android_http.cpp  android_surface_view.cpp  facebook.cpp  framework_activity.cpp  google_play.cpp
pvz2native/src/diagnostics/: guest_probe.cpp  input_probe.cpp
pvz2native/src/elf32/: elf32_loader.c
pvz2native/src/engine/: boot.cpp  frame.cpp  lifecycle.cpp
pvz2native/src/game/: symbols.cpp
pvz2native/src/gfx/: gles_compat.c
pvz2native/src/input/: input_queue.cpp
pvz2native/src/patch/: detours.c  patch_address.c
pvz2native/src/runtime/: dynarmic_config.cpp  guest_heap.cpp  guest_runtime.cpp  guest_zlib.cpp  rsb_index.cpp
tools/: rsb_extract.py
